tests/errors/macro/parser_unexpected_lexeme/include_with_space.c
#include "" nghjk

int main()
{
	return 0;
}
